--- a/excercise6/WebClinicalRecords/Dockerfile
+++ b/excercise6/WebClinicalRecords/Dockerfile
@@ -2,8 +2,11 @@ FROM golang:1.22
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
-COPY main.go .
+
+COPY main.go records.json ./
 COPY internal ./internal
-RUN CGO_ENABLED=0 GOOS=linux go build -o /webclinicalrecords
+COPY templates ./templates
+
+RUN CGO_ENABLED=0 GOOS=linux go build -o ./webclinicalrecords
 EXPOSE 8080
-CMD [ "/webclinicalrecords" ]
+CMD [ "./webclinicalrecords" ]
